[package]
name = "realmd"
version = "0.1.0"
authors = ["Tripp Hill <thilltbc@gmail.com>"]

[dependencies]
log = "0.3"
mysql = "*"
simplelog = "^0.4.3"
chrono = "0.4.0"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
byteorder = "1"
srp = "0.4"
rand = "0.6"
